--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,24 +2,31 @@ cmake_minimum_required(VERSION 3.15)
 
 include(GoogleTest)
 
-add_executable(unit_tests
-    fft.cpp
-    splitvlasovsolver.cpp
-    femperiodicpoissonsolver.cpp
-)
+add_executable(unit_tests splitvlasovsolver.cpp)
 target_compile_features(unit_tests PUBLIC cxx_std_17)
 target_link_libraries(unit_tests
     PUBLIC
         GTest::gtest_main
         GTest::gmock
         GTest::gmock_main
-        FFTW::Double
         paraconf::paraconf
         DDC::PDI
-        vcx::fft
         vcx::vlasov
-	vcx::poisson
+        vcx::poisson
 )
-gtest_discover_tests(unit_tests)
 
-add_subdirectory(landau)
+if(VOICEXX_ENABLE_PERIODIC_RDIMX)
+    target_sources(unit_tests
+        PRIVATE
+            fft.cpp
+            femperiodicpoissonsolver.cpp
+    )
+
+    target_link_libraries(unit_tests PRIVATE vcx::fft)
+
+    add_subdirectory(landau)
+else()
+    target_sources(unit_tests PRIVATE femnonperiodicpoissonsolver.cpp)
+endif()
+
+gtest_discover_tests(unit_tests)
