--- a/src/initialization/CMakeLists.txt
+++ b/src/initialization/CMakeLists.txt
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: MIT
 
 add_library(initialization STATIC
+    maxwellianequilibrium.cpp
     singlemodeperturbinitialization.cpp
 )
 
