--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,6 +64,19 @@ indentation:
     GIT_SUBMODULE_STRATEGY: recursive
   script: |
     ./bin/indent -td
+python_best_practices:
+  only: [ main, merge_requests ]
+  stage: test
+  needs: []
+  image: jbigot/voicexx_env
+  variables:
+    GIT_SUBMODULE_STRATEGY: recursive
+  before_script:
+    export PYTHONPATH="./post-process/PythonScripts"
+  script: |
+    pylint $(find tests -iname *.py)
+    pylint $(find doc -iname *.py)
+    pylint post-process/PythonScripts
 ddc_sync:
   only: [ triggers ]
   needs: []
