--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -27,6 +27,7 @@ if(VOICEXX_ENABLE_PERIODIC_RDIMX)
     target_link_libraries(unit_tests PRIVATE vcx::fft)
 
     add_subdirectory(landau)
+    add_subdirectory(bump_on_tail)
 else()
     target_sources(unit_tests PRIVATE femnonperiodicpoissonsolver.cpp)
 endif()
