Use a global variable for SpeciesInformation

--- a/src/geometry/CMakeLists.txt
+++ b/src/geometry/CMakeLists.txt
@@ -10,6 +10,7 @@ target_include_directories(geometry
 target_link_libraries(geometry INTERFACE
     DDC::DDC
     sll::splines
+    vcx::speciesinfo
 )
 
 if(VOICEXX_ENABLE_PERIODIC_RDIMX)
