--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(vlasov)
 add_subdirectory(interpolation)
 add_subdirectory(initialization)
 add_subdirectory(paraconfpp)
+add_subdirectory(quadrature)
