--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,12 +42,15 @@ cmake_tests_Release:
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
   script: |
+    set -e
     rm -rf build || true
     mkdir build
     cd build
     cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release ..
     make -j 4 VERBOSE=1
     ctest -j 2 --output-on-failure --timeout 5 --output-junit tests.xml
+    ls build/tests/landau/fft/growthrate_t0.0to45.0.png
+    ls build/tests/landau/fft/frequency_t0.0to45.0.png
   artifacts:
     when: always
     paths:
