--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,13 +49,13 @@ cmake_tests_Release:
     cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release ..
     make -j 4 VERBOSE=1
     ctest -j 2 --output-on-failure --timeout 5 --output-junit tests.xml
-    ls tests/landau/fft/growthrate_t_0.0_to_45.0.png
-    ls tests/landau/fft/frequency_t_0.0_to_45.0.png
+    ls ./build/tests/landau/fft/growthrate_t0.0to45.0.png
+    ls ./build/tests/landau/fft/frequency_t0.0to45.0.png
   artifacts:
     when: always
     paths:
-      - ./build/tests/landau/fft/growthrate_t_0.0_to_45.0.png
-      - ./build/tests/landau/fft/frequency_t_0.0_to_45.0.png
+      - ./build/tests/landau/fft/growthrate_t0.0to45.0.png
+      - ./build/tests/landau/fft/frequency_t0.0to45.0.png
     reports:
       junit: ./build/tests.xml
 indentation:
