--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
     - 'main'
-
+  pull_request: 
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -30,6 +30,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: ./docker/voicexx_env
+        cache-from: type=registry,ref=ghcr.io/gyselax/voicexx_env:latest
         pull: true
         push: true
         tags: ghcr.io/gyselax/voicexx_env:${{ github.sha }}
@@ -39,40 +40,45 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: ./docker/voicexx_env
+        cache-from: type=registry,ref=ghcr.io/gyselax/voicexx_env:latest
         pull: true
         push: true
         tags: ghcr.io/gyselax/voicexx_env:latest
 
-  tests:
+  tests_Debug:
     runs-on: ubuntu-latest
     needs: docker
-    container: ghcr.io/gyselax/voicexx_env:${{ github.sha }}
     steps:
     - 
       name: Checkout gyselalibxx
       uses: actions/checkout@v3
-      with:
-        submodules: recursive
+      with: { submodules: recursive }
     - 
       name: Run tests
       run: |
-        cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON .
-        make -j 2 VERBOSE=1
-        ctest --output-on-failure --timeout 5 -LE test_on_Release_only
+        cat<<-EOF > run.sh
+          set -xe
+          cmake -DCMAKE_CXX_FLAGS="-Wall -fno-omit-frame-pointer -fsanitize=address" -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Debug /src
+          make -j 2 VERBOSE=1
+          ctest -j 2 --output-on-failure --timeout 5 --output-junit tests.xml
+        EOF
+        docker run -v ${PWD}:/src:ro ghcr.io/gyselax/voicexx_env:${{ github.sha }} bash /src/run.sh
 
   tests_Release:
     runs-on: ubuntu-latest
     needs: docker
-    container: ghcr.io/gyselax/voicexx_env:${{ github.sha }}
     steps:
     - 
       name: Checkout gyselalibxx
       uses: actions/checkout@v3
-      with:
-        submodules: recursive
+      with: { submodules: recursive }
     - 
       name: Run tests
       run: |
-        cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release .
-        make -j 2 VERBOSE=1
-        ctest --output-on-failure --timeout 5
+        cat<<-EOF > run.sh
+          set -xe
+          cmake -DCMAKE_CXX_FLAGS="-Wall" -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release /src
+          make -j 2 VERBOSE=1
+          ctest -j 2 --output-on-failure --timeout 5 --output-junit tests.xml
+        EOF
+        docker run -v ${PWD}:/src:ro ghcr.io/gyselax/voicexx_env:${{ github.sha }} bash /src/run.sh
