--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,7 +45,7 @@ jobs:
         push: true
         tags: ghcr.io/gyselax/voicexx_env:latest
 
-  tests_Debug:
+  tests:
     runs-on: ubuntu-latest
     needs: docker
     steps:
@@ -58,9 +58,9 @@ jobs:
       run: |
         cat<<-EOF > run.sh
           set -xe
-          cmake -DCMAKE_CXX_FLAGS="-Wall -fno-omit-frame-pointer -fsanitize=address" -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Debug /src
+          cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON /src
           make -j 2 VERBOSE=1
-          ctest -j 2 --output-on-failure --timeout 5 --output-junit tests.xml
+          ctest --output-on-failure --timeout 5 -LE test_on_Release_only
         EOF
         docker run -v ${PWD}:/src:ro ghcr.io/gyselax/voicexx_env:${{ github.sha }} bash /src/run.sh
 
@@ -77,8 +77,8 @@ jobs:
       run: |
         cat<<-EOF > run.sh
           set -xe
-          cmake -DCMAKE_CXX_FLAGS="-Wall" -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release /src
+          cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release /src
           make -j 2 VERBOSE=1
-          ctest -j 2 --output-on-failure --timeout 5 --output-junit tests.xml
+          ctest --output-on-failure --timeout 5
         EOF
         docker run -v ${PWD}:/src:ro ghcr.io/gyselax/voicexx_env:${{ github.sha }} bash /src/run.sh
