--- a/simulations/landau/CMakeLists.txt
+++ b/simulations/landau/CMakeLists.txt
@@ -1,44 +1,46 @@
 # SPDX-License-Identifier: MIT
 
-add_executable(landau_fem_uniform landau_fem_uniform.cpp)
-target_compile_features(landau_fem_uniform PUBLIC cxx_std_17)
-target_link_libraries(landau_fem_uniform
-  PUBLIC
-  DDC::DDC
-  DDC::PDI_Wrapper
-  vcx::initialization
-  vcx::interpolation
-  vcx::poisson
-  vcx::time
-  vcx::speciesinfo
-  vcx::vlasov
-  vcx::paraconfpp
-  PDI::pdi
-  paraconf::paraconf
-  sll::splines
-  )
+foreach(GEOMETRY_VARIANT IN LISTS GEOMETRY_VARIANTS_LIST)
 
-install(TARGETS landau_fem_uniform)
+add_executable(landau_fem_uniform_${GEOMETRY_VARIANT} landau_fem_uniform.cpp)
+target_compile_features(landau_fem_uniform_${GEOMETRY_VARIANT} PUBLIC cxx_std_17)
+target_link_libraries(landau_fem_uniform_${GEOMETRY_VARIANT}
+    PUBLIC
+        DDC::DDC
+        DDC::PDI_Wrapper
+        paraconf::paraconf
+        PDI::pdi
+        sll::splines
+        vcx::initialization_${GEOMETRY_VARIANT}
+        vcx::interpolation_${GEOMETRY_VARIANT}
+        vcx::paraconfpp
+        vcx::poisson_${GEOMETRY_VARIANT}
+        vcx::speciesinfo
+        vcx::time_${GEOMETRY_VARIANT}
+        vcx::vlasov_${GEOMETRY_VARIANT}
+)
 
-if (VOICEXX_ENABLE_PERIODIC_RDIMX)
-    add_executable(landau_fft landau_fft.cpp)
-    target_compile_features(landau_fft PUBLIC cxx_std_17)
-    target_link_libraries(landau_fft
-        PUBLIC
-            DDC::DDC
-            DDC::PDI_Wrapper
-            vcx::initialization
-            vcx::fft
-            vcx::interpolation
-            vcx::poisson
-            vcx::time
-            vcx::speciesinfo
-            vcx::vlasov
-            vcx::paraconfpp
-            PDI::pdi
-            paraconf::paraconf
-            sll::splines
-    )
+install(TARGETS landau_fem_uniform_${GEOMETRY_VARIANT})
 
-    install(TARGETS landau_fft)
-endif()
+endforeach()
+
+add_executable(landau_fft landau_fft.cpp)
+target_compile_features(landau_fft PUBLIC cxx_std_17)
+target_link_libraries(landau_fft
+    PUBLIC
+        DDC::DDC
+        DDC::PDI_Wrapper
+        paraconf::paraconf
+        PDI::pdi
+        sll::splines
+        vcx::fft
+        vcx::initialization_periodic_rdimx
+        vcx::interpolation_periodic_rdimx
+        vcx::paraconfpp
+        vcx::poisson_periodic_rdimx
+        vcx::speciesinfo
+        vcx::time_periodic_rdimx
+        vcx::vlasov_periodic_rdimx
+)
+
+install(TARGETS landau_fft)
