--- a/src/geometry/CMakeLists.txt
+++ b/src/geometry/CMakeLists.txt
@@ -2,21 +2,20 @@
 
 cmake_minimum_required(VERSION 3.15)
 
-add_library(geometry INTERFACE)
-target_include_directories(geometry
+foreach(GEOMETRY_VARIANT IN LISTS GEOMETRY_VARIANTS_LIST)
+
+add_library("geometry_${GEOMETRY_VARIANT}" INTERFACE)
+target_include_directories("geometry_${GEOMETRY_VARIANT}"
     INTERFACE
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
 )
-target_link_libraries(geometry INTERFACE
+target_link_libraries("geometry_${GEOMETRY_VARIANT}" INTERFACE
     DDC::DDC
     sll::splines
     vcx::speciesinfo
 )
+add_library("vcx::geometry_${GEOMETRY_VARIANT}" ALIAS "geometry_${GEOMETRY_VARIANT}")
 
-if(VOICEXX_ENABLE_PERIODIC_RDIMX)
-    target_compile_definitions(geometry INTERFACE -DENABLE_PERIODIC_RDIMX=1)
-else()
-    target_compile_definitions(geometry INTERFACE -DENABLE_PERIODIC_RDIMX=0)
-endif()
+endforeach()
 
-add_library(vcx::geometry ALIAS geometry)
+target_compile_definitions(geometry_periodic_rdimx INTERFACE PERIODIC_RDIMX)
