--- a/src/time/CMakeLists.txt
+++ b/src/time/CMakeLists.txt
@@ -1,25 +1,29 @@
 # SPDX-License-Identifier: MIT
 
-add_library(time STATIC
+foreach(GEOMETRY_VARIANT IN LISTS GEOMETRY_VARIANTS_LIST)
+
+add_library("time_${GEOMETRY_VARIANT}" STATIC
     predcorr.cpp
 )
 
-target_compile_features(time
+target_compile_features("time_${GEOMETRY_VARIANT}"
     PUBLIC
         cxx_std_17
 )
 
-target_include_directories(time
+target_include_directories("time_${GEOMETRY_VARIANT}"
     PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}"
 )
 
-target_link_libraries(time
+target_link_libraries("time_${GEOMETRY_VARIANT}"
     PUBLIC
         DDC::DDC
         DDC::PDI_Wrapper
+        vcx::poisson_${GEOMETRY_VARIANT}
         vcx::speciesinfo
-        vcx::poisson
-        vcx::vlasov
+        vcx::vlasov_${GEOMETRY_VARIANT}
 )
 
-add_library(vcx::time ALIAS time)
+add_library("vcx::time_${GEOMETRY_VARIANT}" ALIAS "time_${GEOMETRY_VARIANT}")
+
+endforeach()
