--- a/.pylintrc
+++ b/.pylintrc
@@ -60,8 +60,7 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
-disable=bad-whitespace,
-        invalid-name,
+disable=invalid-name,
         import-outside-toplevel,
         too-many-arguments,
         too-many-locals,
@@ -81,7 +80,6 @@ disable=bad-whitespace,
         superfluous-parens,
         useless-object-inheritance,
         trailing-newlines,
-        bad-continuation, # wrong indentation on multi-line object
         misplaced-comparison-constant,
         unused-argument,
         redefined-outer-name,
@@ -200,13 +198,6 @@ max-line-length=100
 
 # Maximum number of lines in a module.
 max-module-lines=1000
-
-# List of optional constructs for which whitespace checking is disabled. `dict-
-# separator` is used to allow tabulation in dicts, etc.: {1  : 1,\n222: 2}.
-# `trailing-comma` allows a space between comma and closing bracket: (a, ).
-# `empty-line` allows space-only lines.
-no-space-check=trailing-comma,
-               dict-separator
 
 # Allow the body of a class to be on the same line as the declaration if body
 # contains single statement.
