--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,8 @@ add_subdirectory(fft)
 add_subdirectory(geometry)
 add_subdirectory(time)
 add_subdirectory(speciesinfo)
-add_subdirectory(vlasov)
+add_subdirectory(rhs)
+add_subdirectory(boltzmann)
 add_subdirectory(interpolation)
 add_subdirectory(initialization)
 add_subdirectory(paraconfpp)
