--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -58,7 +58,7 @@ jobs:
       run: |
         cat<<-EOF > run.sh
           set -xe
-          cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON /src
+          cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF /src
           make -j 2 VERBOSE=1
           ctest --output-on-failure --timeout 5 -LE test_on_Release_only
         EOF
@@ -77,7 +77,7 @@ jobs:
       run: |
         cat<<-EOF > run.sh
           set -xe
-          cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release /src
+          cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF /src
           make -j 2 VERBOSE=1
           ctest --output-on-failure --timeout 5
         EOF
