Krook source & sink

--- a/src/rhs/CMakeLists.txt
+++ b/src/rhs/CMakeLists.txt
@@ -4,6 +4,9 @@ foreach(GEOMETRY_VARIANT IN LISTS GEOMETRY_VARIANTS_LIST)
 
 add_library("rhs_${GEOMETRY_VARIANT}" STATIC
     kinetic_source.cpp
+    krook_source_adaptive.cpp
+    krook_source_constant.cpp
+    mask_tanh.cpp
 )
 
 target_compile_features("rhs_${GEOMETRY_VARIANT}"
@@ -18,8 +21,11 @@ target_include_directories("rhs_${GEOMETRY_VARIANT}"
 target_link_libraries("rhs_${GEOMETRY_VARIANT}"
     PUBLIC
         DDC::DDC
-        vcx::speciesinfo
         vcx::geometry_${GEOMETRY_VARIANT}
+        vcx::initialization_${GEOMETRY_VARIANT}
+        vcx::quadrature
+        vcx::speciesinfo
+        vcx::time_${GEOMETRY_VARIANT}
 )
 
 add_library("vcx::rhs_${GEOMETRY_VARIANT}" ALIAS "rhs_${GEOMETRY_VARIANT}")
