--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,9 @@ add_executable(unit_tests_${GEOMETRY_VARIANT}
     quadrature.cpp
     splitvlasovsolver.cpp
     kineticsource.cpp
+    krooksource.cpp
+    masks.cpp
+    rk2.cpp
 )
 target_compile_features(unit_tests_${GEOMETRY_VARIANT} PUBLIC cxx_std_17)
 target_link_libraries(unit_tests_${GEOMETRY_VARIANT}
