--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ cmake_tests:
     mkdir build
     cd build
     cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF ..
-    make -j 4 VERBOSE=1
+    make -j 4
     ctest -j 2 --output-on-failure --timeout 5 -LE test_on_Release_only --output-junit tests.xml
   artifacts:
     when: always
@@ -29,7 +29,7 @@ cmake_tests_Release:
     mkdir build
     cd build
     cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF ..
-    make -j 4 VERBOSE=1
+    make -j 4
     ctest -j 2 --output-on-failure --timeout 5 --output-junit tests.xml
     ls ./tests/landau/fft/growthrate_t0.0to45.0.png
     ls ./tests/landau/fft/frequency_t0.0to45.0.png
