--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(interpolation)
 add_subdirectory(initialization)
 add_subdirectory(paraconfpp)
 add_subdirectory(quadrature)
+add_subdirectory(utils)
