Polar poisson solver

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "vendor/kokkos"]
 	path = vendor/kokkos
 	url = https://github.com/kokkos/kokkos.git
+[submodule "vendor/eigen"]
+	path = vendor/eigen
+	url = https://gitlab.com/libeigen/eigen.git
